binrw/tests/ui/invalid_assert_condition.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_assert_condition.rs:4:13
  |
4 | #[br(assert("wrong type"))]
  |             ^^^^^^^^^^^^ expected `bool`, found `&str`
  |
note: return type inferred to be `bool` here
 --> $DIR/invalid_assert_condition.rs:3:10
  |
3 | #[derive(BinRead)]
  |          ^^^^^^^
